# wingbird

./: README.md
wingbird-cli/: Cargo.toml
wingbird-cli/src/: config.rs  main.rs  server.rs  storage.rs  ui.rs  utils.rs
wingbird-cli/src/api/: client.rs  mod.rs
wingbird-cli/src/api/dto/: apps.rs  mod.rs  upload.rs  whoami.rs
wingbird-cli/src/cli/: cli.rs  mod.rs
wingbird-cli/src/cli/commands/: init.rs  login.rs  logout.rs  mod.rs  patch.rs  release.rs  whoami.rs
wingbird-server/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
wingbird-server/migrations/: 0000_tricky_stardust.sql  0001_yummy_gauntlet.sql
wingbird-server/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
wingbird-server/src/: env.ts  index.tsx
wingbird-server/src/db/: apps.ts  auth.ts  schema.ts  upload.ts
wingbird-server/src/features/apps/: app.service.ts  apps.routes.ts
wingbird-server/src/features/auth/: auth.routes.ts
wingbird-server/src/features/upload/: upload.routes.ts  upload.service.ts
wingbird-server/src/lib/: auth.ts  db.ts
wingbird-server/src/middleware/: auth.ts  db.ts  error.ts
wingbird-server/src/ui/: index.tsx  renderer.tsx
wingbird-server/src/ui/apps/auth/: login.tsx  success.tsx
wingbird-server/src/ui/apps/landing/: waitlist-page.tsx
wingbird-server/src/ui/client/: auth-success.tsx  cli-window.tsx  login.tsx
wingbird-server/src/ui/components/: cli-window.tsx  logo.tsx
wingbird-server/src/ui/lib/: auth-client.ts
