[package]
name = "wingbird-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
clap = { version = "4.6.2", features = ["derive"] }
colored = "3.1.1"
keyring = "4.1.5"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
webbrowser = "1.2.1"
