[package]
name = "wingbird-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive"] }
colored = "3.1.1"
futures-util = "0.3.33"
keyring = "4.1.5"
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
webbrowser = "1.2.1"
yaml_serde = "0.10.4"
